fixed some formatting for text, the fixed z index for the nav bar because it was being covered up by my portrait. then flipped my portrait so that it is looking in into the page and not out

--- a/style/about.css
+++ b/style/about.css
@@ -3,6 +3,7 @@
   --black: #000000;
   --bblue: #04080d;
   --dblue: #1b263b;
+  --dblue2: #111824;
   --mblue: #415a77;
   --lblue: #778da9;
   --grey: #e0e1dd;
@@ -51,6 +52,7 @@
   border-radius: 10px;
   align-self: center;
   justify-content: center;
+  transform: scaleX(-1);
 }
 
 #box2 {
@@ -76,6 +78,7 @@
   letter-spacing: 1px;
   margin: 0.5vw 0 0.5vw 1vw;
   font-size: 2.7vw;
+  color: var(--grey);
 }
 
 .description {
@@ -97,14 +100,19 @@
 
 b {
   transition-duration: 0.4s;
-  color: white;
+  color: var(--grey);
 }
 
 #box3 {
   grid-column: 3/4;
   grid-row: 1/4;
-  background-color: var(--dblue);
+  background-image: radial-gradient(
+    circle,
+    var(--dblue2) 0%,
+    var(--dblue) 100%
+  );
   border-radius: 10px;
+  box-shadow: 0 0 10px var(--mblue);
 }
 
 .tech-stack {
@@ -123,6 +131,7 @@ b {
   grid-row: 1/2;
   justify-self: center;
   align-self: center;
+  color: var(--grey);
 }
 
 .tech-icon {
@@ -162,7 +171,6 @@ b {
 #status {
   border-radius: 10px;
   margin-top: 1vw;
-  border: 4px solid var(--secondary);
   text-align: center;
   display: grid;
   justify-content: center;
@@ -170,16 +178,18 @@ b {
   font-size: 2.4vw;
   font-weight: 300;
   color: var(--secondary);
-  animation: glow-red-animate 3s linear infinite;
+  animation: glow-red-animate 2s linear infinite;
 }
 
 @keyframes glow-red-animate {
   0%,
   100% {
     box-shadow: 0 0 10px var(--secondary);
+    border: 2px solid var(--secondary);
   }
   50% {
     box-shadow: 0 0 20px var(--secondary);
+    border: 4px solid var(--secondary);
   }
 }
 
