--- a/style/navbar.css
+++ b/style/navbar.css
@@ -21,6 +21,7 @@
   position: sticky;
   position: -webkit-sticky;
   top: 0;
+  z-index: 9998;
 }
 
 .nav {
